Fix background on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -7,6 +7,7 @@ body {
     font-family: 'Bahnschrift';
     background-image: url(../images/mexican.jpg);
     background-size: cover;
+    background-repeat: no-repeat;
     overflow: hidden;
     display: flex;
     flex-direction: column;
